# crypto-led-ticker

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE
.github/workflows/: ci.yml
app/: main.cpp
cmake/: Doctest.cmake  Misc.cmake  cimg.cmake  httplib.cmake  rpi-rgb-led-matrix.cmake
include/: crypto_compare_api.h  version.h.in
src/: crypto_compare_api.cpp
tests/: CMakeLists.txt  crypto_compare_api.cpp
